# proof-of-twitter-sp1

backend/program/: Cargo.toml
backend/program/elf/: riscv32im-succinct-zkvm-elf
backend/program/src/: main.rs
backend/script/: Cargo.toml
backend/script/src/: main.rs
generate_regex_bin/: Cargo.toml
generate_regex_bin/src/: main.rs
